styles/style.scss
/* ... */
.footer {
  margin: auto;
  margin-top: 100px;

  max-width: 1208px;
  height: 460px;
  a {
    min-width: 150px;
    font-family: inter;

    margin-top: 3px;
  }
  p,
  h3 {
    font-family: inter;
    margin-top: 0px;
    color: $Primaires-black;
  }
  .black {
    color: $Primaires-black;
    font-style: regular;
  }
  .list {
    height: 70%;
    display: grid;
    grid-template-columns: repeat(5, 20%);
    grid-template-rows: repeat(2, 25%);
    grid-column-gap: 0px;
    grid-row-gap: 0px;

    .elem1 {
      grid-area: 1 / 1 / 2 / 2;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
    }
    .elem2 {
      grid-area: 1 / 2 / 2 / 3;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
    }
    .elem3 {
      grid-area: 1 / 3 / 2 / 4;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
    }
    .elem4 {
      grid-area: 1 / 4 / 2 / 5;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
    }
    .elem5 {
      grid-area: 1 / 5 / 2 / 6;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
    }
    .elem6 {
      grid-area: 2 / 1 / 3 / 2;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
    }
    .elem7 {
      grid-area: 2 / 2 / 3 / 3;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
    }
    .elem8 {
      grid-area: 2 / 3 / 3 / 4;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
    }
    .elem9 {
      grid-area: 2 / 4 / 3 / 5;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
    }
    .elem10 {
      grid-area: 2 / 5 / 3 / 6;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
    }
  }
  hr {
    margin-top: 40px;
    border-radius: 50%;
    opacity: 0.3;
    width: 80%;
  }

  .BottomElem {
    margin-top: 2%;
    display: flex;
    justify-content: space-between;
    margin-right: 25%;
    align-items: center;
    .LinkedIn {
      display: none;
    }
    h3 {
      color: $Primaires-olive;
    }
    > div {
      display: flex;
      justify-content: space-between;
      gap: 20px;
    }
  }

  @media screen and (max-width: $mobileBreakpoint) {
    max-width: 375px;
    p {
      margin-top: 5px;
    }
    a {
      font-size: 14px;
    }
    hr {
      display: none;
    }
    .BottomElem {
      margin: auto;
      flex-direction: column-reverse;

      .LinkedIn {
        height: 50px;
        p {
          margin: auto;
        }
        order: 2;
        display: flex;
        align-items: center;
        justify-content: center;
        width: fit-content;
        svg {
          width: 16px;
          height: 16px;
        }
      }
      div {
        flex-direction: row;
      }
      > :nth-child(1) {
        order: 2;
      }
      > :nth-child(2) {
        margin-top: 20px;
      }
      > :nth-child(3) {
        text-align: center;
        flex-wrap: wrap;
        justify-content: center;
        font-size: 11px;
        &::after {
          content: "";
          display: block;
          width: 100%;
          height: 2px;
          background: #b4b4b4;
        }
      }
    }
    .list {
      display: flex;
      flex-direction: column;
      height: fit-content;
      .CTA-Medium {
        display: none;
      }
      h3 {
        margin-top: 20px;
        margin-bottom: 10px;
      }
      .elem6,
      .elem8,
      .elem5,
      .elem9 {
        &::after {
          content: "";
          margin-top: 20px;
          display: block;
          width: 100%;
          height: 2px;
          background: #b4b4b4;
        }
      }
    }
  }
}

.Menu {
  p,
  h6 {
    color: $Greyscales-Black;
  }

  position: absolute;
  background-color: $Greyscales-White;
  top: 20px;
  max-width: 1208px;

  height: 200px;
  min-height: fit-content;
  padding-top: 70px;
  border-radius: 20px;

  box-shadow: 0px 10px 9px 2px rgba(0, 0, 0, 0.31);
  z-index: 10;

  .MenuElem {
    display: flex;
    min-width: 30%;
    height: 150px;
    overflow: hidden;
    position: relative;
    div {
      display: flex;
      flex-direction: column;

      margin: 0;
      h6 {
        margin: 4%;

        text-align: left;
      }
      p {
        margin-top: 6%;
        text-align: left;
      }
    }

    svg {
      width: 16px;
      height: 16px;
      right: 10px;
      top: 20px;
      display: none;
      position: absolute;
    }
    &:hover {
      svg {
        display: block;
      }
    }
  }
  > hr {
    border-radius: 50%;
    width: 80%;
  }
  > div {
    margin-left: 5%;
    margin-right: 5%;
    margin-top: 20px;
    display: flex;
    justify-content: space-between;
  }
  button {
    padding: 0;
    border: none;
    background-color: $Greyscales-White;
    border-radius: 20px;
    padding: 10px;
    width: 30%;
    &:hover {
      background-color: #f6f7fa;
    }
  }
  @media screen and (max-width: $mobileBreakpoint) {
    height: 100%;

    position: fixed;
    background-attachment: scroll;
    top: 0;
    width: 100%;
    .CTA-Small {
      width: 100%;
    }
    > div {
      flex-direction: column;
      width: 90%;
      display: flex;
      button {
        display: flex;
        &:hover {
          background-color: inherit;
        }
      }
      svg {
        width: 16px;
      }
    }
  }
}

